add styles to tables and buttons

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -58,7 +58,7 @@
             <thead>
                 <tr>
                     <th colspan="2">
-                        <button class="new-btn" onClick="newApplicant()">Add a New Applicant</button>
+                        <button class="new-btn" onClick="newApplicant()">New Applicant</button>
                     </th>
                     <th>ID</th>
                     <th>Name</th>
