--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -52,7 +52,7 @@
             <thead>
                 <tr>
                     <th colspan="2">
-                        <button class="new-btn" onClick="newApplication()">Add a New Application</button>
+                        <button class="new-btn" onClick="newApplication()">New Application</button>
                     </th>
                     <th>ID</th>
                     <th>Date Applied</th>
