--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -47,12 +47,13 @@
     <!-- BROWSE -->
     <div id='browse'>
         <h3>Browse Companies</h3>
-        <table>
+        <table class="table-class">
         <!-- Access data passed from app.py -->
             <thead>
                 <tr>
-                    <th><a href="#" onClick="newCompany()">New</a></th>
-                    <th></th>
+                    <th colspan="2">
+                        <button class="new-btn" onClick="newCompany()">New Company</button>
+                    </th>
                     <th>ID</th>
                     <th>Name</th>
                     <th>Description</th>
