--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -89,11 +89,13 @@
     <div id='browse'>
     <!-- Select (Show) Positions-->
         <h3>Browse Positions</h3>
-        <table>
+        <table class="table-class">
         <!-- Access data passed from app.py -->
             <thead>
                 <tr>
-                    <th><a href="#" onClick="newPosition()">New</a></th>
+                    <th>
+                        <button class="new-btn" onClick="newPosition()">New</button>
+                    </th>
                     <th>Company</th>
                     <th>Title</th>
                     <th>Location</th>
@@ -131,11 +133,13 @@
 
     <!-- Select (Show) Positions and Recruiters-->
         <h3>Browse Position and Recruiter Affiliations</h3>
-        <table>
+        <table class="table-class">
         <!-- Access data passed from app.py -->
             <thead>
                 <tr>
-                    <th><a href="#" onClick="newAffiliation()">New</a></th>
+                    <th>
+                        <button class="new-btn" onClick="newAffiliation()">New</button>
+                    </th>
                     <th>Company</th>
                     <th>Title</th>
                     <th>Link</th>
@@ -171,11 +175,13 @@
 
     <!-- Select (Show) Recruiters-->
         <h3>Browse Recruiters</h3>
-        <table>
+        <table class="table-class">
             <!-- Access data passed from app.py -->
             <thead>
                 <tr>
-                    <th><a href="#" onClick="newRecruiter()">New</a></th>
+                    <th>
+                        <button class="new-btn" onClick="newRecruiter()">New</button>
+                    </th>
                     <th>Name</th>
                     <th>Email</th>
                     <th>Phone</th>
