add styles for tables and buttons

--- a/templates/search_application.j2
+++ b/templates/search_application.j2
@@ -17,7 +17,7 @@
 <!-- BROWSE -->
     <div id='searchApplication'>
         <h3>Applications Search Results</h3>
-        <table>
+        <table class="table-class">
         <!-- Access data passed from app.py -->
             <thead>
                 <tr>
@@ -59,7 +59,7 @@
         <p>&nbsp;</p>
 
         <!-- Return to All Applications Button -->
-        <a href='/applications'>
+        <a class="btn-anchor" href='/applications'>
                 <input class="btn" type="button" value="Return to All Applications">
             </a>
     </div>
