--- a/static/style.css
+++ b/static/style.css
@@ -53,6 +53,31 @@ a {
   color: inherit;
 }
 
+.btn-anchor > .btn,
+.btn-primary {
+  background-image: linear-gradient(#73b8ed, #3687b3);
+  color: white;
+  border: 1px solid #3687b3;
+  border-radius: 4px;
+  text-align: center;
+  padding: 4px 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  font-weight: 500;
+}
+
+.btn-anchor > .btn:hover,
+.btn-primary:hover {
+  background-image: linear-gradient(#7cbef0, #4195c2);
+  border-color: #4190bb;
+}
+
+.btn-anchor > .btn:active,
+.btn-primary:hover {
+  background-image: linear-gradient(#5da8e1, #2476a3);
+  border-color: #2877a2;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+}
+
 /* INPUT STYLES */
 
 input[type="text"],
