--- a/templates/search_positions.j2
+++ b/templates/search_positions.j2
@@ -17,7 +17,7 @@
     <!-- BROWSE -->
     <div id='searchPositions'>
         <h3>Positions Search Results</h3>
-        <table>
+        <table class="table-class">
         <!-- Access data passed from app.py -->
             <thead>
                 <tr>
