Added required for inputs in Add Recruiter form

--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -331,12 +331,14 @@
                     id="linkedin" name="linkedin" 
                     placeholder="linkedin.com/in/johnsmith"
                     maxlength="100"
+                    required
                 />
                 <label for="lastContacted">Last Contacted</label> 
                 <input 
                     type="date" 
                     class="form-control"
                     id="lastContacted" name="lastContacted"
+                    required
                 />
                 <label for="details">Details</label> 
                 <input 
@@ -344,6 +346,7 @@
                     class="form-control"
                     id="details" name="details" 
                     maxlength="500"
+                    required
                 />
             </fieldset>
             <!-- Create 'Add Recruiter' and 'Cancel' buttons -->
