change form legend to h3

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -103,8 +103,9 @@
     <div id='insert'>
         <!-- form to INSERT new Applicant into Applicants entity -->
         <form id="insertApplicant" action="/applicants" method="post">
-            <legend><strong>Add Applicant</strong></legend>
+            
             <fieldset>
+            <h3><strong>Add Applicant</strong></h3>
                 <!-- placeholder shows ghost text, required forces an input, pattern forces input adherance -->
                 <label for="name">Name: </label>
                 <input 
