--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -125,13 +125,15 @@
                     placeholder="smithj@gmail.com" 
                     required
                 />
-            </fieldset>
 
-            <!-- Create 'Add Applicant' and 'Cancel' buttons -->
-            <input type="submit" value="Add Applicant" name="Add_Applicant" class="btn btn-primary" style="margin:.5rem;">
-            <a class="btn-anchor" href='/applicants'>
-                <input class="btn" type="button" value="Cancel">
-            </a>
+                <div class="wrapper">
+                    <!-- Create 'Add Applicant' and 'Cancel' buttons -->
+                    <input type="submit" value="Add Applicant" name="Add_Applicant" class="btn btn-primary" style="margin:.5rem;">
+                    <a class="btn-anchor" href='/applicants'>
+                        <input class="btn" type="button" value="Cancel">
+                    </a>
+                </div>
+            </fieldset>
         </form>
     </div>
     <!-- END INSERT -->
