--- a/templates/delete_applicant.j2
+++ b/templates/delete_applicant.j2
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+    <h1>Applicants</h1>
+
+    <a href="/">Home</a> |
+    <a href="/applicants">Applicants</a> |
+    <a href="/applications">Applications</a> |
+    <a href="/companies">Companies</a> |
+    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a></p>
 
     <!-- DELETE -->
     <div id='delete'>
