--- a/templates/edit_applicant.j2
+++ b/templates/edit_applicant.j2
@@ -18,6 +18,13 @@
 </head>
 
 <body>
+    <h1>Applicants</h1>
+
+    <a href="/">Home</a> |
+    <a href="/applicants">Applicants</a> |
+    <a href="/applications">Applications</a> |
+    <a href="/companies">Companies</a> |
+    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a></p>
 
     <!-- EDIT --> 
     <div id='edit'>
