--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -15,14 +15,24 @@
             if (form == 'insert') {
                 document.getElementById('browse').style.display = 'none';
                 document.getElementById('insert').style.display = 'block';
+                document.getElementById('search').style.display = 'none';
+            } else if (form == 'search') {
+                document.getElementById('browse').style.display = 'none';
+                document.getElementById('insert').style.display = 'none';
+                document.getElementById('search').style.display = 'block';
             } else { // display browse by default
                 document.getElementById('browse').style.display = 'block';
                 document.getElementById('insert').style.display = 'none';
+                document.getElementById('search').style.display = 'none';
             }
         }
 
         function newApplication() {
             showForm('insert');
+        }
+
+        function searchApplication() {
+            showForm('search');
         }
 
         function browseApplications() {
@@ -102,6 +112,7 @@
         {% endif %}
 
         </table>
+        <button class="new-btn" onClick="searchApplication()">Search Applications</button>
         <p>&nbsp;</p>
     </div>
     <!-- END BROWSE -->
@@ -110,18 +121,21 @@
     <div id='search'>
         <!-- form to SEARCH Applications for an Application -->
         <form id="searchApplications" action="/search-applications" method="get">
-            <legend><strong>Search Applications</strong></legend>
             <fieldset>
-                
+                <h3><strong>Search Applications</strong></h3>
                 <label for="applicant">Applicant Name:</label>
                 <select class="form-control" id="applicant" name="applicant" placeholder="">
                 {% for applicant in applicants %}
                     <option value="{{ applicant['applicantID'] }}"> {{ applicant['applicantID'] }} - {{applicant['name']}}</option>
                 {% endfor %}
                 </select>
-
+                <div class="wrapper">
+                    <input type="submit" value="Search Application" name="Search_Application" class="btn btn-primary" style="margin:.5rem;">
+                    <a class="btn-anchor" href='/applications'>
+                        <input class="btn" type="button" value="Cancel">
+                    </a>
+                </div>
             </fieldset>
-            <input type="submit" value="Search Application" name="Search_Application" class="btn btn-primary" style="margin:.5rem;">
         </form>
     </div>
     <!-- END SEARCH -->
@@ -130,8 +144,8 @@
     <div id='insert'>
         <!-- form to INSERT new Application into Applications entity -->
         <form id="insertApplication" action="/applications" method="post">
-            <legend><strong>Add Application</strong></legend>
             <fieldset>
+                <h3><strong>Add Application</strong></h3>
                 <!-- placeholder shows ghost text, required forces an input, pattern forces input adherance -->
                 
                 <label for="applicant">Applicant Name:</label>
@@ -156,13 +170,14 @@
                     placeholder="" 
                     required
                 />
+                <div class="wrapper">
+                    <!-- Create 'Add Application' and 'Cancel' buttons -->
+                    <input type="submit" value="Add Application" name="Add_Application" class="btn btn-primary" style="margin:.5rem;">
+                    <a class="btn-anchor" href='/applications'>
+                        <input class="btn" type="button" value="Cancel">
+                    </a>
+                </div>
             </fieldset>
-
-            <!-- Create 'Add Application' and 'Cancel' buttons -->
-            <input type="submit" value="Add Application" name="Add_Application" class="btn btn-primary" style="margin:.5rem;">
-            <a class="btn-anchor" href='/applications'>
-                <input class="btn" type="button" value="Cancel">
-            </a>
         </form>
     </div>
     <!-- END INSERT -->
