edit delete form styles

--- a/templates/delete_applicant.j2
+++ b/templates/delete_applicant.j2
@@ -18,7 +18,7 @@
     <a href="/applicants">Applicants</a> |
     <a href="/applications">Applications</a> |
     <a href="/companies">Companies</a> |
-    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a></p>
+    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
 
     <!-- DELETE -->
     <div id='delete'>
