--- a/static/style.css
+++ b/static/style.css
@@ -227,25 +227,29 @@ fieldset > h3 {
   color: #f94144;
 } */
 
-#deleteApplicant > fieldset > p {
+#deleteApplicant > fieldset > p,
+#deleteApplication > fieldset > p {
   font-weight: 500;
   padding-bottom: 5px;
   color: #f94144;
 }
 
-input[name="Delete_Applicant"] {
+input[name="Delete_Applicant"],
+input[name="Delete_Application"] {
   background-image: linear-gradient(#fe595b, #e12b2e);
   color: white;
   border: 1px solid #cb2023;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
 }
 
-input[name="Delete_Applicant"]:hover {
+input[name="Delete_Applicant"]:hover,
+input[name="Delete_Application"]:hover {
   background-image: linear-gradient(#fa6466, #ec3f42);
   border: 1px solid #db282b;
 }
 
-input[name="Delete_Applicant"]:active {
+input[name="Delete_Applicant"]:active,
+input[name="Delete_Application"]:active {
   background-image: linear-gradient(#fb4b4e, #d62326);
   border: 1px solid #be1a1d;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
