--- a/static/style.css
+++ b/static/style.css
@@ -228,14 +228,18 @@ fieldset > h3 {
 } */
 
 #deleteApplicant > fieldset > p,
-#deleteApplication > fieldset > p {
+#deleteApplication > fieldset > p,
+#deleteCompany > fieldset > p,
+#deleteAffiliation > fieldset > p {
   font-weight: 500;
   padding-bottom: 5px;
   color: #f94144;
 }
 
 input[name="Delete_Applicant"],
-input[name="Delete_Application"] {
+input[name="Delete_Application"],
+input[name="Delete_Company"],
+input[name="Delete_Affiliation"] {
   background-image: linear-gradient(#fe595b, #e12b2e);
   color: white;
   border: 1px solid #cb2023;
@@ -243,13 +247,17 @@ input[name="Delete_Application"] {
 }
 
 input[name="Delete_Applicant"]:hover,
-input[name="Delete_Application"]:hover {
+input[name="Delete_Application"]:hover,
+input[name="Delete_Company"]:hover,
+input[name="Delete_Affiliation"]:hover {
   background-image: linear-gradient(#fa6466, #ec3f42);
   border: 1px solid #db282b;
 }
 
 input[name="Delete_Applicant"]:active,
-input[name="Delete_Application"]:active {
+input[name="Delete_Application"]:active,
+input[name="Delete_Company"]:active,
+input[name="Delete_Affiliation"]:active {
   background-image: linear-gradient(#fb4b4e, #d62326);
   border: 1px solid #be1a1d;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
