--- a/templates/edit_applicant.j2
+++ b/templates/edit_applicant.j2
@@ -30,8 +30,8 @@
     <div id='edit'>
         <!-- form to UPDATE an Applicant -->
         <form id="editApplicant" action="/edit-applicant/{{data[0].applicantID}}" method="post">
-            <legend><strong>Update Applicant</strong></legend>
             <fieldset>
+                <h3><strong>Update Applicant</strong></h3>
                 <label>ID: <span>{{data[0].applicantID}}</span></label>
                 <label for="name">Name</label>
                 <input 
@@ -52,17 +52,19 @@
                     value="{{data[0].email}}"
                     required
                 />
+                <div class="wrapper">
+                    <input 
+                        type="submit" 
+                        value="Update Applicant"
+                        name="Update_Applicant"
+                        class="btn btn-primary" 
+                        style="margin:.5rem;"
+                    />
+                    <a class="btn-anchor" href='/applicants'>
+                        <input class="btn" type="button" value="Cancel">
+                    </a>
+                </div>
             </fieldset>
-            <input 
-                type="submit" 
-                value="Update Applicant"
-                name="Update_Applicant"
-                class="btn btn-primary" 
-                style="margin:.5rem;"
-            />
-            <a class="btn-anchor" href='/applicants'>
-                <input class="btn" type="button" value="Cancel">
-            </a>
         </form>
     </div>
     <!-- END EDIT -->
