edit update form styles

--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -42,7 +42,7 @@
     <a href="/applicants">Applicants</a> |
     <a href="/applications">Applications</a> |
     <a href="/companies">Companies</a> |
-    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a></p>
+    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
 
     <!-- BROWSE -->
     <div id='browse'>
