--- a/templates/edit_position.j2
+++ b/templates/edit_position.j2
@@ -12,12 +12,19 @@
 </head>
 
 <body>
+    <h1>Positions</h1>
+
+    <a href="/">Home</a> |
+    <a href="/applicants">Applicants</a> |
+    <a href="/applications">Applications</a> |
+    <a href="/companies">Companies</a> |
+    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
 
     <div id='edit'>
         <!-- form to UPDATE a Position -->
         <form id="editPosition" action="/edit-position/{{data[0].positionID}}" method="post">
-            <legend><strong>Update Position</strong></legend>
             <fieldset>
+                <h3><strong>Update Position</strong></h3>
                 <label>ID: <span>{{data[0].positionID}}</span></label>
                 <label for="company">Company Name</label>
                 <select class="form-control" name="company" id="company" required>
@@ -62,17 +69,19 @@
                     maxlength="100"
                     required
                 />
+                <div class="wrapper">
+                    <input 
+                        type="submit" 
+                        value="Update Position"
+                        name="Update_Position"
+                        class="btn btn-primary" 
+                        style="margin:.5rem;"
+                    />
+                    <a class="btn-anchor" href='/positionscompanyrecruiters'>
+                        <input class="btn" type="button" value="Cancel">
+                    </a>
+                </div>
             </fieldset>
-            <input 
-                type="submit" 
-                value="Update Position"
-                name="Update_Position"
-                class="btn btn-primary" 
-                style="margin:.5rem;"
-            />
-            <a class="btn-anchor" href='/positionscompanyrecruiters'>
-                <input class="btn" type="button" value="Cancel">
-            </a>
         </form>
     </div>
 
