--- a/static/style.css
+++ b/static/style.css
@@ -195,6 +195,7 @@ table {
   z-index: 9;
   transform: scale(1.01);
   background-color: #ffffff;
+  color: #0e70a4;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
@@ -202,7 +203,8 @@ table {
 
 form {
   width: 400px;
-  margin-top: 25px;
+  margin-top: 35px;
+  margin-left: 35px;
 }
   
 fieldset {
@@ -222,10 +224,6 @@ fieldset > h3 {
   font-weight: 300;
   border-bottom: 1px solid #dddddd;
 }
-
-/* #deleteApplicant > fieldset > h3 {
-  color: #f94144;
-} */
 
 #deleteApplicant > fieldset > p,
 #deleteApplication > fieldset > p,
