--- a/static/style.css
+++ b/static/style.css
@@ -33,8 +33,23 @@ input {
 
 /* TYPOGRAPHY STYLES */
 
-h3 {
-  margin-top: 10px;
+div > h3 {
+  margin-top: 15px;
+  color: #2a97c6;
+  position: relative;
+  padding-bottom: 5px;
+  width: max-content;
+  font-size: 24px;
+}
+
+div > h3::after {
+  content: "";
+  background: #2a97c6;
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
 }
 
 /* BUTTON STYLES */
@@ -164,7 +179,7 @@ table {
 
 .table-class {
   border-collapse: collapse;
-  margin: 25px 0;
+  margin: 5px 0;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
