--- a/templates/delete_applicant.j2
+++ b/templates/delete_applicant.j2
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <h1>Applicants</h1>
+    <div class="header">
+        <h1>Applicants</h1>
+    </div>
 
     <a href="/">Home</a> |
     <a href="/applicants">Applicants</a> |
