--- a/templates/delete_applicant.j2
+++ b/templates/delete_applicant.j2
@@ -24,7 +24,7 @@
 
     <!-- DELETE -->
     <div id='delete'>
-        <h3>Delete Applicant</h3>
+        <h3 class="delete-header">Delete Applicant</h3>
     <!-- form for performing DELETE on an Applicant -->
         <form id="deleteApplicant" action="/delete-applicant/{{data[0].applicantID}}" method="post">
             <fieldset>
