--- a/templates/edit_applicant.j2
+++ b/templates/edit_applicant.j2
@@ -44,7 +44,7 @@
                     id="name" 
                     name="name" 
                     value="{{data[0].name}}"
-                    pattern="^[A-Z][a-z]+\s[A-Z][a-z]+$"
+                    pattern="^[A-Z][a-z]+\s[A-Z][A-Za-z]+$"
                     required
                 />
                 <label for="email">Email</label> 
