--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -46,7 +46,9 @@
 </head>
 
 <body>
-    <h1>Applications</h1>
+    <div class="header">
+        <h1>Applications</h1>
+    </div>
 
     <a href="/">Home</a> |
     <a href="/applicants">Applicants</a> |
